# owncoder

./: .gitignore  DESCRIPTION_BY_CLAUDE.md  README.md  __init__.py  __main__.py  _hashing.py  _test_helpers.py  _tokens.py  agent.py  agent.toml  agent.toml.example  config.py  context.py  failure_report.py  main.py  prompt_compiler.py  pyproject.toml  skills.py  summarizer.py  tool_compactor.py
cli/: __init__.py  chat.py  commit.py  debug.py  diag.py  index.py  logging_setup.py  main.py  run.py  serve.py  sessions.py
config/: __init__.py  loader.py  model_probe.py  models.py  registry.py
coord/: __init__.py  presence.py
core/: __init__.py  agent.py  cache_tracker.py  checkpoint.py  confidence.py  context_budget.py  crash_report.py  gpu_lock.py  history_ops.py  idle_tasks.py  loop_detector.py  model_mode.py  model_status.py  output_store.py  prompts.py  sqlite_util.py  streaming.py  text_utils.py  tool_calls.py  tool_discovery.py  turn.py  turn_signals.py
data_provider/: __init__.py  local.py  protocol.py
docs/: cleaning-and-reproducibility-plan.md  notify.md  security-hardening-plan-2.md  security-improvements-plan.md  session-naming-plan.md
ideas/: __init__.py  store.py
ipc/: __init__.py  agent_worker.py  controller.py  local.py  messages.py  transport.py  wire.py
mcp/: __init__.py  client.py  http_client.py  manager.py
memory/: compactor.py  facts_store.py  h_compaction_types.py  models.py  promoter.py  qa_log.py  reflector.py  rules_loader.py  session.py  session_namer.py  session_summarizer.py  side_log.py  skill_distiller.py  smart_compactor.py  store.py
metrics/: model_stats.py  turn_metrics.py
notify/: __init__.py  broker.py  channels.py  crypto.py  messages.py  relay_server.py
planning/: __init__.py  compact.py  dag.py  increment.py  plan.py  recovery.py
prompt_compiler/: __init__.py  _engine.py  _index.py  _state.py
prompts/: analyze.txt  base_rules.txt  compaction.txt  synthesize.txt  system.txt  tools.txt
rag/: archive.py  (+12 more)
(+225 files in other folders)
