[project]
name = "local-code-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-kotlin",
    "tree-sitter-bash",
    "sqlite-vec>=0.1",
    "openai>=1.0",
    "textual>=0.50",
    "tiktoken>=0.6",
    "gitpython>=3.1",
    "rich>=13.0",
    "pathspec>=0.12",
    "watchdog>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-watch>=4.2",
]
graph = [
    "graphifyy>=0.1.14",
]
notify = [
    "websockets>=12",
    "cryptography>=42",
]

[project.scripts]
agent = "agent.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
markers = [
    "e2e: end-to-end tests requiring a live LLM server",
]
addopts = "-m 'not e2e'"

[tool.setuptools.packages.find]
where = [".."]
include = ["agent*"]
